<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonPanel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/id_bottom_bt_1"
        style="@style/MyBottomChildLinearLayout">


        <TextView
            style="@style/MyBottomChildTextView"
            android:drawableTop="@drawable/selector_bottom_bt_1"
            android:text="@string/navigation_bar_title_1" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/id_bottom_bt_2"
        style="@style/MyBottomChildLinearLayout">

        <TextView
            style="@style/MyBottomChildTextView"
            android:drawableTop="@mipmap/companion_a"
            android:text="@string/navigation_bar_title_2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_bottom_bt_3"
        style="@style/MyBottomChildLinearLayout">


        <TextView
            style="@style/MyBottomChildTextView"
            android:drawableTop="@mipmap/guide_a"
            android:text="@string/navigation_bar_title_3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/id_bottom_bt_4"
        style="@style/MyBottomChildLinearLayout">


        <TextView
            style="@style/MyBottomChildTextView"
            android:drawableTop="@mipmap/dynamic_a"
            android:text="@string/navigation_bar_title_4" />
    </LinearLayout>

</LinearLayout>